# eugenetolstikhin.github.io

./: .breakpoints  .dockerignore  .gitcommitmsg.txt  .gitignore  .replit  .travis.yml  README.md  app.vue  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: codeql-analysis.yml  pages.yml
Projects/: README.docker.md  docker-compose.yml
Projects/AdminPanel/: CMakeLists.txt  Dockerfile  entrypoint.sh
Projects/AdminPanel/qml/: Main.qml  qml.qrc
Projects/AdminPanel/src/: AdminPanel.c  AdminPanelQt.cpp  config.cfg
Projects/BowlingScore/: CMakeLists.txt  Dockerfile  Readme.md  config.cfg  entrypoint.sh
Projects/BowlingScore/build-tests/: CMakeCache.txt
Projects/BowlingScore/hdr/: ConfigFactory.h  ConfigFile.h  ConsoleLogger.h  ConsoleView.h  FileLogger.h  Frame.h  Game.h  GameInitialiser.h  Lane.h  LoggerFactory.h  PlainTextView.h  Player.h  PointsListenerFactory.h  PointsListenerLocal.h  PointsListenerSimulation.h  QtScoreView.h  SocketBasic.h  SocketClient.h  SocketServer.h  ViewFactory.h
Projects/BowlingScore/interface/: ICommon.h  IConfig.h  IConfigFactory.h  IFrame.h  IGame.h  ILane.h  ILogger.h  ILoggerFactory.h  IPlayer.h  IPointsListener.h  IPointsListenerFactory.h  IView.h  IViewFactory.h
Projects/BowlingScore/qml/: BowlingScore.qml  qml.qrc
Projects/BowlingScore/src/: BowlingScore.cpp  ConfigFactory.cpp  ConfigFile.cpp  ConsoleLogger.cpp  ConsoleView.cpp  FileLogger.cpp  Frame.cpp  Game.cpp  GameInitialiser.cpp  Lane.cpp  LoggerFactory.cpp  PlainTextView.cpp  Player.cpp  PointerListenerFactory.cpp  PointsListenerFactory.cpp  PointsListenerLocal.cpp  PointsListenerSimulation.cpp  QtScoreView.cpp  SocketBasic.cpp  SocketClient.cpp  SocketServer.cpp  ViewFactory.cpp
Projects/BowlingScore/tests/: CMakeLists.txt  FrameTest.cpp  GameTest.cpp  LaneTest.cpp  ScoringRulesTests.cpp
Projects/BowlingScore/tests/hdr/: FrameTest.hpp  LaneTest.hpp  PointsListenerLocalTest.hpp  PointsListenerSimulationTest.hpp  TestBase.hpp
Projects/BowlingScore/tests/src/: ConsoleLoggerTest.cpp  ConsoleViewTest.cpp  FrameTest.cpp  GameTest.cpp  PlayerTest.cpp  PointsListenerFactoryTest.cpp  PointsListenerLocalTest.cpp  ViewFactoryTest.cpp
Projects/BowlingScore_POC/: CMakeLists.txt  Readme.md
Projects/BowlingScore_POC/hdr/: ConsoleLogger.h  ConsoleView.h  FileLogger.h  Frame.h  Game.h  GameInitialiser.h  Lane.h  LoggerFactory.h  Player.h  PointsListenerFactory.h  PointsListenerLocal.h  PointsListenerSimulation.h  SocketBasic.h  SocketClient.h  SocketServer.h  ViewFactory.h
Projects/BowlingScore_POC/interface/: ICommon.h  IConfig.h  IFrame.h  IGame.h  ILane.h  ILogger.h  IPlayer.h  IPointsListener.h  IView.h
Projects/BowlingScore_POC/src/: BowlingScore.cpp  ConfigFactory.cpp  ConsoleLogger.cpp  ConsoleView.cpp  FileLogger.cpp  Frame.cpp  Game.cpp  GameInitialiser.cpp  Lane.cpp  LoggerFactory.cpp  Player.cpp  PointsListenerFactory.cpp  PointsListenerLocal.cpp  PointsListenerSimulation.cpp  SocketServer.cpp  ViewFactory.cpp
Projects/BowlingScore_POC/tests/hdr/: ConsoleLoggerTest.hpp  ConsoleViewTest.hpp  GameTest.hpp  LoggerFactoryTest.hpp  PlayerTest.hpp  PointsListenerFactoryTest.hpp  TestBase.hpp  ViewFactoryTest.hpp
Projects/BowlingScore_POC/tests/src/: FrameTest.cpp  LaneTest.cpp  LoggerFactoryTest.cpp  PointsListenerLocalTest.cpp  PointsListenerSimulationTest.cpp
Projects/PointsGenerator/: CMakeLists.txt  Dockerfile  entrypoint.sh
Projects/PointsGenerator/src/: PointsGenerator.c  config.cfg
Projects/SmallCarAuction/: README.md  docker-compose.yml
Projects/SmallCarAuction/backend/: .env.example  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
Projects/SmallCarAuction/backend/prisma/: schema.prisma  seed.ts
Projects/SmallCarAuction/backend/src/: app.controller.ts  app.e2e.spec.ts  app.module.ts  main.ts  tracing.ts
Projects/SmallCarAuction/backend/src/auctions/: auction-events.service.spec.ts  auction-events.service.ts  auction-expiration-queue.service.ts  auctions.controller.ts  auctions.module.ts  auctions.service.spec.ts  auctions.service.ts
Projects/SmallCarAuction/backend/src/auth/: auth.controller.ts  auth.module.ts  (+4 more)
Projects/SmallCarAuction/frontend/: .dockerignore  .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
Projects/SmallCarAuction/frontend/app/: globals.css  layout.tsx  page.tsx
Projects/SmallCarAuction/frontend/src/: App.test.tsx  App.tsx  AuctionCard.test.tsx  AuctionCard.tsx  AuthPanel.test.tsx  AuthPanel.tsx  api.ts  auctionCardMachine.test.ts  auctionCardMachine.ts  format.ts  types.ts
Projects/SmallImageLibrary/: README.md  docker-compose.yml
Projects/SmallImageLibrary/backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
Projects/SmallImageLibrary/backend/prisma/: schema.prisma  seed.ts
Projects/SmallImageLibrary/backend/src/: app.module.ts  main.ts
Projects/SmallImageLibrary/docs/: submission.md
Projects/SmallImageLibrary/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
Projects/SmallImageLibrary/frontend/app/: globals.css  layout.tsx  page.tsx
Projects/SmallImageLibrary/frontend/src/: api.ts  highlight.test.tsx  types.ts
Projects/SmallImageLibrary/tools/: make-submission-pdf.ps1
Projects/SmallImageLibraryPureNext/: .gitignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
Projects/SmallImageLibraryPureNext/app/: globals.css  layout.tsx  page.tsx
Projects/SmallImageLibraryPureNext/docs/: submission.md
Projects/SmallImageLibraryPureNext/src/lib/: client-api.ts  fixture-data.ts  highlight.test.tsx  highlight.tsx  preprocess.test.ts  preprocess.ts  search-store.test.ts  search-store.ts  types.ts
Projects/SmallImageLibraryPureNext/tools/: make-submission-pdf.ps1
Projects/scripts/: build.ps1  build.sh
assets/css/: main.css
components/: GitHubRepoList.vue  ProjectCard.vue  SkillMatrix.vue
data/: portfolio.ts
tests/: browser-smoke.mjs  portfolio.test.ts
types/: portfolio.ts
(+33 files in other folders)
